--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
 
       <div class="red-panda">
-        <img src="https://raw.githubusercontent.com/mdn/learning-area/main/html/multimedia-and-embedding/mdn-splash-page-start/originals/red-panda.jpg">
+        <img src="red-panda.jpg">
       </div>
 
     </main>
