--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <img src="https://raw.githubusercontent.com/mdn/learning-area/main/html/multimedia-and-embedding/mdn-splash-page-start/originals/firefox_logo-only_RGB.png" >
+      <img src="firefox_logo-only_RGB.png" >
     </header>
     <main>
       <article>
@@ -93,13 +93,13 @@
           <img src="https://duncanbscruggs.github.io/mozillasplashpage/images/firefox_logo-only_RGB400.png">
         </a>
         <a href="https://www.mozilla.org/">
-          <img src="https://raw.githubusercontent.com/mdn/learning-area/main/html/multimedia-and-embedding/mdn-splash-page-start/originals/mozilla-dinosaur-head.png">
+          <img src="mozilla-dinosaur-head.png">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img src="https://raw.githubusercontent.com/mdn/learning-area/main/html/multimedia-and-embedding/mdn-splash-page-start/originals/firefox-addons.jpg">
+          <img src="firefox-addons.jpg">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="https://raw.githubusercontent.com/mdn/learning-area/5c24cf4a601a07c0a3e99cb3bb4312da26f9e6ea/html/multimedia-and-embedding/mdn-splash-page-start/originals/mdn.svg">
+          <img src="mdn.svg">
         </a>
         <div class="clearfix"></div>
       </div>
