--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <div class="further-info">
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img src="https://duncanbscruggs.github.io/mozillasplashpage/images/firefox_logo-only_RGB400.png">
+          <img src="firefox_logo-only_RGB400.png">
         </a>
         <a href="https://www.mozilla.org/">
           <img src="mozilla-dinosaur-head.png">
